--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -3,6 +3,8 @@ name: C/C++ CI
 on:
   push:
     branches: [ master ]
+  release:
+    types: [published]
   pull_request:
     branches: [ master ]
 
@@ -21,3 +23,20 @@ jobs:
       run: sudo apt-get install make
     - name: make
       run: make
+    - name: Prepare artifact
+      run: |
+        mkdir -p ./artifact/firmware
+        cp -rf $(find ./bulid -type f) ./artifact/firmware/
+          - name: Deliver firmware
+        uses: actions/upload-artifact@v2
+        with:
+          name: CLtest
+          path: ./bin/targets/
+          
+    - name: Upload release asset
+      uses: svenstaro/upload-release-action@v2
+      with:
+        repo_token: ${{ secrets.YOURTOKEN }}
+        file: ./artifact/firmware/*
+        tag: ${{ github.ref }}
+        file_glob: true
