--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Prepare artifact
       run: |
         mkdir -p ./artifact/firmware
-        cp -rf $(find ./bulid/CLtest -type f) ./artifact/firmware/
+        cp -rf $(find ./bulid -type f -name "*.bin") ./artifact/firmware/
           - name: Deliver firmware
         uses: actions/upload-artifact@v2
         with:
