--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -27,11 +27,11 @@ jobs:
       run: |
         mkdir -p ./artifact/firmware
         cp -rf $(find ./build -type f -name "*.bin") ./artifact/firmware/
-          - name: Deliver firmware
-        uses: actions/upload-artifact@v2
-        with:
-          name: CLtest
-          path: ./bin/targets/
+    - name: Deliver firmware
+      uses: actions/upload-artifact@v2
+      with:
+        name: CLtest
+        path: ./build
           
     - name: Upload release asset
       uses: svenstaro/upload-release-action@v2
