--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -23,6 +23,8 @@ jobs:
       run: sudo apt-get install make
     - name: make
       run: make
+    - name: deletecache
+      run: bash ./delete.sh
     - name: Prepare artifact
       run: |
         mkdir -p ./artifact/firmware
